# hermes-evalops-plugin

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: install-config.md
examples/: demo_plugin_flow.py  hermes-config.yaml
plugins/evalops/: __init__.py  plugin.yaml
src/hermes_evalops_plugin/: __init__.py  config.py  gateway_provider.py  hooks.py  platform_client.py  redaction.py  trace_context.py
tests/: test_gateway_provider.py  test_hooks.py  test_trace_context.py
